# Toolbox-OOP

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  Wav2sig.h  driver.cpp  wav2sig.cpp
examples/: atmAtten-example.cpp  regmics-example.cpp  speed-of-sound-example.cpp
include/: ArrayToolbox.h  AudioFile.h  HandyFunctions.h  atmAtten.h  delay.h  regmics.h  roomimpres.h  speedofsound.h  wav2sig.h  wav2sig.hpp
include/sigpack/window/: window.h
libs/: armadillo
libs/armadillo_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  GenCube_bones.hpp  Gen_bones.hpp  GlueCube_bones.hpp  Glue_bones.hpp  MapMat_bones.hpp  MapMat_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  OpCube_bones.hpp  Op_bones.hpp  Proxy.hpp  ProxyCube.hpp  SpBase_bones.hpp  SpBase_meat.hpp  SpCol_bones.hpp  SpCol_meat.hpp  SpGlue_bones.hpp  SpGlue_meat.hpp  SpMat_bones.hpp  SpMat_iterators_meat.hpp  SpMat_meat.hpp  SpOp_bones.hpp  SpOp_meat.hpp  SpProxy.hpp  SpRow_bones.hpp  SpRow_meat.hpp  SpSubview_bones.hpp  SpSubview_iterators_meat.hpp  SpSubview_meat.hpp  SpValProxy_bones.hpp  SpValProxy_meat.hpp  access.hpp  (+376 more)
libs/sigpack/: sigpack.h
libs/sigpack/base/: base.h
libs/sigpack/filter/: filter.h
libs/sigpack/gplot/: gplot.h
libs/sigpack/image/: image.h
libs/sigpack/kalman/: kalman.h
source/: makefile
src/: .HandyFunctions.cpp.swp  AudioFile.cpp  HandyFunctions.cpp  atmAtten.cpp  delay.cpp  driver  main.cpp  makefile  regmics.cpp  roomimpres.cpp  speedofsound.cpp  test.cpp  wav2sig.cpp
(+1 files in other folders)
